esc50 data retrieval. feature extraction. audio classification

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,19 @@ ESC-50-master/
 noise_reduction/
 processed/
 testaudio/
+training_data/
+features/
+predictions/
+models/
 VAD-python/
 venv/
 audio-classification/
 pyAudioAnalysis/
 .bashrc
+
 notes.txt
+dependencies.txt
+
+*.npy
+*.ogg
+*.h5
